--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "react-scripts": "5.0.1",
     "sass": "^1.63.6",
-    "typescript": "^4.9.5",
-    "react-scripts": "5.0.1"
+    "typescript": "^4.9.5"
   },
   "eslintConfig": {
     "extends": [
