--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "postcss-px-to-viewport": "^1.1.1",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
     "typescript": "^4.9.5"
