--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,11 @@
   // 导入配置文件
   "extends": "./path.tsconfig.json",
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "@scss/*": ["src/styles/*"]
+    },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
